--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pre-flight",
   "version": "1.1.0",
   "description": "Ensure all core dependencies are up to date before `npm start`",
+  "repository": "https://github.com/MarshallOfSound/pre-flight",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
