--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "1.1.1",
   "description": "Ensure all core dependencies are up to date before `npm start`",
   "repository": "https://github.com/MarshallOfSound/pre-flight",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "type": "module",
   "scripts": {
+    "prepublishOnly": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "pre-flight": "./cli.js"
+    "pre-flight": "./lib/cli.js"
   },
   "author": "Samuel Attard",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.1.2",
-    "commander": "^2.9.0",
-    "semver": "^5.1.0"
-  }
+    "chalk": "^5.3.0",
+    "semver": "^7.6.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.5",
+    "@types/semver": "^7.5.8",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2"
+  },
+  "files": [
+    "lib",
+    "README.md"
+  ]
 }
